<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/white"
	tools:ignore="all">


	<FrameLayout android:id="@+id/frame_2"
		android:background="@drawable/rec_purple_border_black"
		android:layout_marginTop="443dp"
		android:layout_marginStart="84dp"
		android:layout_width="235dp"
		android:layout_height="53dp"
		>

		<TextView
			android:id="@+id/sign_in"
			android:layout_width="235dp"
			android:layout_height="53dp"
			android:layout_gravity="center_horizontal|center_vertical"
			android:layout_marginLeft="0dp"
			android:layout_marginTop="-5dp"
			android:fontFamily="@font/suravaram"
			android:gravity="center"
			android:text="@string/sign_in_string"
			android:textColor="@color/sign_in_color"
			android:textSize="30sp" />

	</FrameLayout>


	<FrameLayout android:id="@+id/frame_3"
		android:layout_marginTop="517dp"
		android:layout_marginStart="84dp"
		android:layout_width="235dp"
		android:layout_height="53dp"
		android:background="@drawable/rec_blue_border_black"
		>

		<TextView android:id="@+id/sign_up"
			android:fontFamily="@font/suravaram"
			android:layout_gravity="center_horizontal|center"
			android:gravity="center"
			android:textSize="30sp"
			android:textColor="@color/sign_in_color"
			android:layout_marginLeft="0dp"
			android:layout_marginTop="-5dp"
			android:layout_width="235dp"
			android:layout_height="53dp"
			android:text="@string/sign_up_string"
			 />

	</FrameLayout>


	<FrameLayout android:id="@+id/frame_4"
		android:layout_marginTop="624dp"
		android:layout_centerHorizontal="true"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<ImageView android:id="@+id/google_1"
			android:src="@drawable/icon_google"
			android:contentDescription="google_1"
			android:layout_marginTop="14dp"
			android:layout_width="25dp"
			android:layout_height="25.6dp" />

		<TextView android:id="@+id/continue_with_google"
			android:fontFamily="@font/suravaram"
			android:layout_gravity="center_vertical|end"
			android:gravity="end"
			android:textSize="25sp"
			android:textColor="@color/sign_in_color"
			android:layout_marginLeft="0dp"
			android:layout_marginTop="0dp"
			android:layout_width="234dp"
			android:layout_height="70.5dp"
			android:text="@string/continue_with_google_string"
			 />

	</FrameLayout>

	<ImageView android:id="@+id/img_7041_1"
		android:src="@drawable/bg_welcome"
		android:contentDescription="img_7041_1"
		 android:layout_marginStart="13dp"
		android:layout_marginTop="123dp"
		android:layout_width="364dp"
		android:layout_height="269.8dp" />


	<FrameLayout android:id="@+id/logo"
		android:layout_marginTop="68dp"
		android:layout_marginStart="121dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<TextView android:id="@+id/care"
			android:fontFamily="@font/vibur"
			android:textSize="38.43sp"
			android:textColor="@color/sign_in_color"
			android:layout_marginLeft="81dp"
			android:layout_marginTop="17dp"
			android:layout_width="108.21537208557dp"
			android:layout_height="82.215372085571dp"
			android:text="@string/care_string"
			 />

		<TextView android:id="@+id/t"
			android:fontFamily="@font/vibur"
			android:textSize="46.12sp"
			android:textColor="@color/sign_in_color"
			android:layout_marginLeft="59dp"
			android:layout_marginTop="0dp"
			android:layout_width="78.058446884155dp"
			android:layout_height="98.058446884155dp"
			android:text="@string/t_string"
			 />

		<ImageView android:id="@+id/exclude"
			android:src="@drawable/logo01"
			android:contentDescription="exclude"
			 android:layout_marginStart="0dp"
			android:layout_marginTop="12dp"
			android:layout_width="63.12dp"
			android:layout_height="53.37dp" />

		<ImageView android:id="@+id/intersect"
			android:src="@drawable/logo03"
			android:contentDescription="intersect"
			 android:layout_marginStart="20dp"
			android:layout_marginTop="20dp"
			android:layout_width="21.18dp"
			android:layout_height="43.94dp" />

		<ImageView android:id="@+id/subtract"
			android:src="@drawable/logo07"
			android:contentDescription="subtract"
			 android:layout_marginStart="21dp"
			android:layout_marginTop="20dp"
			android:layout_width="42.18dp"
			android:layout_height="44.9dp" />

		<ImageView android:id="@+id/vital_signs"
			android:src="@drawable/logo_08"
			android:contentDescription="vital_signs"
			 android:layout_marginStart="38dp"
			android:layout_marginTop="33dp"
			android:layout_width="20.75dp"
			android:layout_height="18.45dp" />

	</FrameLayout>
</RelativeLayout>