<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout android:id="@+id/logo"
        android:layout_marginTop="68dp"
        android:layout_marginStart="121dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <TextView android:id="@+id/care"
            android:fontFamily="@font/vibur"
            android:textSize="38.43sp"
            android:textColor="@color/sign_in_color"
            android:layout_marginLeft="81dp"
            android:layout_marginTop="17dp"
            android:layout_width="108.21537208557dp"
            android:layout_height="82.215372085571dp"
            android:text="@string/care_string"
            />

        <TextView android:id="@+id/t"
            android:fontFamily="@font/vibur"
            android:textSize="46.12sp"
            android:textColor="@color/sign_in_color"
            android:layout_marginLeft="59dp"
            android:layout_marginTop="0dp"
            android:layout_width="78.058446884155dp"
            android:layout_height="98.058446884155dp"
            android:text="@string/t_string"
            />

        <ImageView android:id="@+id/exclude"
            android:src="@drawable/logo01"
            android:contentDescription="exclude"
            android:layout_marginStart="0dp"
            android:layout_marginTop="12dp"
            android:layout_width="63.12dp"
            android:layout_height="53.37dp" />

        <ImageView android:id="@+id/intersect"
            android:src="@drawable/logo03"
            android:contentDescription="intersect"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_width="21.18dp"
            android:layout_height="43.94dp" />

        <ImageView android:id="@+id/subtract"
            android:src="@drawable/logo07"
            android:contentDescription="subtract"
            android:layout_marginStart="21dp"
            android:layout_marginTop="20dp"
            android:layout_width="42.18dp"
            android:layout_height="44.9dp" />

        <ImageView android:id="@+id/vital_signs"
            android:src="@drawable/logo_08"
            android:contentDescription="vital_signs"
            android:layout_marginStart="38dp"
            android:layout_marginTop="33dp"
            android:layout_width="20.75dp"
            android:layout_height="18.45dp" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your role? "
        android:fontFamily="@font/pacifico"
        android:textSize="45dp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>
    <ImageView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_marginTop="230dp"
        android:src="@drawable/img_doctor_8"/>
    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="242dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/rec_pink_11_border">

        <TextView
            android:id="@+id/tv_doctor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/frauncesregular"
            android:text="Doctor?"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginLeft="242dp"
        android:layout_marginTop="470dp"
        android:background="@drawable/rec_pink_12_border">

        <TextView
            android:id="@+id/tv_patient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/frauncesregular"
            android:text="Patient?"
            android:textSize="30dp"
            android:textAlignment="center"
            android:textColor="@color/black" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_4"
        android:layout_marginTop="624dp"
        android:layout_centerHorizontal="true"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rec_white_border_black_long_2">

        <ImageView
            android:id="@+id/google_1"
            android:src="@drawable/icon_google"
            android:layout_marginTop="14dp"
            android:layout_width="25dp"
            android:layout_height="25.6dp"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:id="@+id/continue_with_google"
            android:fontFamily="@font/suravaram"
            android:textSize="25sp"
            android:textColor="@color/sign_in_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_google_string"
            android:layout_marginLeft="60dp"/>

    </FrameLayout>
</RelativeLayout>